--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(MyIndustrialHMI
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        serialworker.h serialworker.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET MyIndustrialHMI APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
